# guile-gobject

./: .gitignore  Makefile.am  configure.ac
lib/: Makefile.in
src/: Makefile.am  g-object.scm  gc.c  gc.h  gclosure.c  ggclosure.c  ggclosure.h  ggi-argument.c  ggi-argument.h  ggi-array.c  ggi-basic-types.c  ggi-basic-types.h  ggi-cache.c  ggi-cache.h  ggi-closure.h  ggi-enum-marshal.c  ggi-error.h  ggi-hashtable.c  ggi-hashtable.h  ggi-info.c  ggi-info.h  ggi-invoke-state-struct.h  ggi-invoke.c  ggi-invoke.h  ggi-list.h  ggi-module.c  ggi-module.h  ggi-object.c  ggi-repository.c  ggi-repository.h  ggi-struct-marshal.h  ggi-value.h  ggobject.c  ggobject.h  ggparameter.c  ggtype.c  ggtype.h  ggutils.c  ggutils.h  gi-info.c  (+16 more)
src/backup/: ggi-argument.c  ggi-array.h  ggi-basic-types.c  ggi-cache.h  ggi-enum-marshal.h  ggi-object.h  ggi-value.c  ggparameter.h  ggsignal.c  ggsignal.h  ggtype.c  ggtype.h  ggvalue.c  ggvalue.h
src/g-object/: config.scm  config.scm.in  g-closure.scm  g-parameter.scm  g-signal.scm  g-type.scm  g-value.scm  introspection.scm  utils.scm
src/g-object/introspection/: info.scm  module.scm  repository.scm
src/gobject/: config.scm.in  gclosure.scm  gparameter.scm  gsignal.scm  gtype.scm  gvalue.scm  introspection.scm  utils.scm
src/gobject/introspection/: info.scm  repository.scm
